[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/root/popups/first_time/RegionSection.gd" type="Script" id=1]
[ext_resource path="res://assets/ratings/esrb/T.png" type="Texture" id=2]
[ext_resource path="res://assets/ratings/esrb/E.png" type="Texture" id=3]
[ext_resource path="res://assets/ratings/esrb/E10.png" type="Texture" id=4]
[ext_resource path="res://assets/ratings/esrb/M.png" type="Texture" id=5]
[ext_resource path="res://scenes/root/popups/first_time/RatingContainer.gd" type="Script" id=6]
[ext_resource path="res://scenes/root/popups/first_time/DateContainer.gd" type="Script" id=7]
[ext_resource path="res://assets/ratings/esrb/AO.png" type="Texture" id=8]
[ext_resource path="res://scenes/ui_nodes/AgeRatingTextureRect.tscn" type="PackedScene" id=10]

[node name="RegionSection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Select your current region. This is purely to change visual elements, and has no impact whatsoever on what games you can play."
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 51.0
margin_bottom = 17.0
text = "Region: "

[node name="RegionOptions" type="OptionButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 55.0
margin_right = 110.0
margin_bottom = 20.0
text = "USA"
items = [ "USA", null, false, 0, null, "Europe", null, false, 1, null, "Japan", null, false, 2, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 46.0

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 64.0
text = "You can also manually configure the following fields to your desire:"
align = 1

[node name="RatingContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 192.0
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/RatingContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/RatingContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 98.0
margin_bottom = 17.0
text = "Rating System: "

[node name="RatingOptions" type="OptionButton" parent="VBoxContainer/VBoxContainer/RatingContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 102.0
margin_right = 162.0
margin_bottom = 20.0
text = "ESRB"
items = [ "ESRB", null, false, 0, null, "PEGI", null, false, 1, null, "CERO", null, false, 2, null ]
selected = 0

[node name="RatingIcons" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/RatingContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 124.0

[node name="1" parent="VBoxContainer/VBoxContainer/RatingContainer/RatingIcons" instance=ExtResource( 10 )]
margin_right = 80.0
margin_bottom = 100.0
texture = ExtResource( 3 )

[node name="2" parent="VBoxContainer/VBoxContainer/RatingContainer/RatingIcons" instance=ExtResource( 10 )]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="3" parent="VBoxContainer/VBoxContainer/RatingContainer/RatingIcons" instance=ExtResource( 10 )]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="4" parent="VBoxContainer/VBoxContainer/RatingContainer/RatingIcons" instance=ExtResource( 10 )]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 100.0
texture = ExtResource( 5 )

[node name="5" parent="VBoxContainer/VBoxContainer/RatingContainer/RatingIcons" instance=ExtResource( 10 )]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 100.0
texture = ExtResource( 8 )

[node name="DateContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 1024.0
margin_bottom = 234.0
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/DateContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/DateContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 17.0
text = "Date format "

[node name="DateOptions" type="OptionButton" parent="VBoxContainer/VBoxContainer/DateContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 195.0
margin_bottom = 20.0
text = "MM/DD/YYYY"
items = [ "MM/DD/YYYY", null, false, 0, null, "DD/MM/YYYY", null, false, 1, null, "YYYY/MM/DD", null, false, 2, null ]
selected = 0

[node name="ExampleDate" type="Label" parent="VBoxContainer/VBoxContainer/DateContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="Timer" type="Timer" parent="VBoxContainer/VBoxContainer/DateContainer"]
wait_time = 0.1
autostart = true

[node name="DevicesContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 1024.0
margin_bottom = 280.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/DevicesContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/DevicesContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 102.0
margin_bottom = 17.0
text = "System names: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/VBoxContainer/DevicesContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 166.0
margin_bottom = 20.0
text = "ESRB"
items = [ "ESRB", null, false, 0, null, "PEGI", null, false, 1, null, "CERO", null, false, 2, null ]
selected = 0

[node name="RatingIcons" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/DevicesContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/DevicesContainer/RatingIcons"]
margin_bottom = 18.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/DevicesContainer/RatingIcons/VBoxContainer"]

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/DevicesContainer/RatingIcons/VBoxContainer"]
margin_top = 4.0
margin_bottom = 18.0

[node name="NextButton" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Next"

[connection signal="item_selected" from="VBoxContainer/VBoxContainer/HBoxContainer/RegionOptions" to="." method="_on_RegionOptions_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/RatingContainer/HBoxContainer/RatingOptions" to="VBoxContainer/VBoxContainer/RatingContainer" method="_on_RatingOptions_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/DateContainer/HBoxContainer/DateOptions" to="VBoxContainer/VBoxContainer/DateContainer" method="_on_DateOptions_item_selected"]
[connection signal="timeout" from="VBoxContainer/VBoxContainer/DateContainer/Timer" to="VBoxContainer/VBoxContainer/DateContainer" method="_on_Timer_timeout"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/DevicesContainer/HBoxContainer/OptionButton" to="VBoxContainer/VBoxContainer/DevicesContainer" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
